--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,7 @@ body{
                 &:hover{
                     color: red;
                     font-weight: 900;
+                    transition: 300ms ease-in-out;
                 }
             }
         }
